5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1684_1100.log
== TEST (2019-04-29 17:34:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 or cedula!=5 or cedula!=10 or cedula!=20 or cedula!=50 or cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal=Tartaruga
elif (cedula==5):
	animal=Garca
elif: (cedula==10):
	animal=Arara
elif: (cedula==20):
	animal=Mico-leao-dourado
elif: (cedula==50):
	animal=Onca-pintada
else:
	animal=Garoupa
	
print("Animal:", animal)
	
-- ERROR:
File "XXXX", line 13
    elif: (cedula==10):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:34:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 or cedula!=5 or cedula!=10 or cedula!=20 or cedula!=50 or cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal=Tartaruga
elif (cedula==5):
	animal=Garca
elif (cedula==10):
	animal=Arara
elif (cedula==20):
	animal=Mico-leao-dourado
elif (cedula==50):
	animal=Onca-pintada
else:
	animal=Garoupa
	
print("Animal:", animal)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:35:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 or cedula!=5 or cedula!=10 or cedula!=20 or cedula!=50 or cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal=Tartaruga
elif (cedula==5):
	animal=Garca
elif (cedula==10):
	animal=Arara
elif (cedula==20):
	animal=Mico-leao-dourado
elif (cedula==50):
	animal=Onca-pintada
else:
	animal=Garoupa
	
print("Animal:", animal)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:35:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 or cedula!=5 or cedula!=10 or cedula!=20 or cedula!=50 or cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal=Tartaruga
elif (cedula==5):
	animal=Garca
elif (cedula==10):
	animal=Arara
elif (cedula==20):
	animal=Mico-leao-dourado
elif (cedula==50):
	animal=Onca-pintada
else:
	animal=Garoupa
	
print("Animal:", cedula)
	
-- OUTPUT:
Entrada: 100
Animal: Invalido
Animal: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:36:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal=Tartaruga
elif (cedula==5):
	animal=Garca
elif (cedula==10):
	animal=Arara
elif (cedula==20):
	animal=Mico-leao-dourado
elif (cedula==50):
	animal=Onca-pintada
else:
	animal=Garoupa
	
print("Animal:", animal)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    animal=Garoupa
NameError: name 'Garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:37:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
else:
	animal=Garoupa
	
print("Animal:", animal)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    animal=Garoupa
NameError: name 'Garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:38:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
else:
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:38:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
else:
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- EXECUTION TIME:
0.193686
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:38:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
else:
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:38:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
else:
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:38:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
else:
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- EXECUTION TIME:
0.216637
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:39:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
elif (cedila==100)
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- ERROR:
File "XXXX", line 19
    elif (cedila==100)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:39:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
elif (cedula==100)
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- ERROR:
File "XXXX", line 19
    elif (cedula==100)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:39:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
elif (cedula==100):
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:39:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
elif (cedula==2):
	animal= "Tartaruga"
elif (cedula==5):
	animal= "Garca"
elif (cedula==10):
	animal= "Arara"
elif (cedula==20):
	animal= "Mico-leao-dourado"
elif (cedula==50):
	animal= "Onca-pintada"
elif (cedula==100):
	animal= "Garoupa"
	
print("Animal:", animal)
	
-- EXECUTION TIME:
0.172367
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:43:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
	if (cedula==2):
		animal= "Tartaruga"
	elif (cedula==5):
		animal= "Garca"
	elif (cedula==10):
		animal= "Arara"
	elif (cedula==20):
		animal= "Mico-leao-dourado"
	elif (cedula==50):
		animal= "Onca-pintada"
	elif (cedula==100):
		animal= "Garoupa"
else:
	print("Animal:", animal)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:43:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
	if (cedula==2):
		animal= "Tartaruga"
	elif (cedula==5):
		animal= "Garca"
	elif (cedula==10):
		animal= "Arara"
	elif (cedula==20):
		animal= "Mico-leao-dourado"
	elif (cedula==50):
		animal= "Onca-pintada"
	elif (cedula==100):
		animal= "Garoupa"
else:
	print("Animal:", animal)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:43:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
else:
	if (cedula==2):
		animal= "Tartaruga"
	elif (cedula==5):
		animal= "Garca"
	elif (cedula==10):
		animal= "Arara"
	elif (cedula==20):
		animal= "Mico-leao-dourado"
	elif (cedula==50):
		animal= "Onca-pintada"
	elif (cedula==100):
		animal= "Garoupa"
	print("Animal:", animal)
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:43:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
else:
	if (cedula==2):
		animal= "Tartaruga"
	elif (cedula==5):
		animal= "Garca"
	elif (cedula==10):
		animal= "Arara"
	elif (cedula==20):
		animal= "Mico-leao-dourado"
	elif (cedula==50):
		animal= "Onca-pintada"
	elif (cedula==100):
		animal= "Garoupa"
	print("Animal:", animal)
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:44:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
else:
	if (cedula==2):
		animal= "Tartaruga"
	elif (cedula==5):
		animal= "Garca"
	elif (cedula==10):
		animal= "Arara"
	elif (cedula==20):
		animal= "Mico-leao-dourado"
	elif (cedula==50):
		animal= "Onca-pintada"
	elif (cedula==100):
		animal= "Garoupa"
	print("Animal:", animal)
	
-- EXECUTION TIME:
0.181089
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:46:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
else:
	if (cedula==2):
		animal= "Tartaruga"
		print("Animal:", animal)
	elif (cedula==5):
		animal= "Garca"
		print("Animal:", animal)
	elif (cedula==10):
		animal= "Arara"
		print("Animal:", animal)
	elif (cedula==20):
		animal= "Mico-leao-dourado"
		print("Animal:", animal)
	elif (cedula==50):
		animal= "Onca-pintada"
		print("Animal:", animal)
	elif (cedula==100):
		animal= "Garoupa"
		print("Animal:", animal)
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:46:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
else:
	if (cedula==2):
		animal= "Tartaruga"
		print("Animal:", animal)
	elif (cedula==5):
		animal= "Garca"
		print("Animal:", animal)
	elif (cedula==10):
		animal= "Arara"
		print("Animal:", animal)
	elif (cedula==20):
		animal= "Mico-leao-dourado"
		print("Animal:", animal)
	elif (cedula==50):
		animal= "Onca-pintada"
		print("Animal:", animal)
	elif (cedula==100):
		animal= "Garoupa"
		print("Animal:", animal)
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:46:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula= int(input("valor da cedula:"))
print("Entrada:", cedula)
if (cedula!=2 and cedula!=5 and cedula!=10 and cedula!=20 and cedula!=50 and cedula!=100):
	print("Animal: Invalido")
else:
	if (cedula==2):
		animal= "Tartaruga"
		print("Animal:", animal)
	elif (cedula==5):
		animal= "Garca"
		print("Animal:", animal)
	elif (cedula==10):
		animal= "Arara"
		print("Animal:", animal)
	elif (cedula==20):
		animal= "Mico-leao-dourado"
		print("Animal:", animal)
	elif (cedula==50):
		animal= "Onca-pintada"
		print("Animal:", animal)
	elif (cedula==100):
		animal= "Garoupa"
		print("Animal:", animal)
	
-- EXECUTION TIME:
0.206839
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
